# overfit-lint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-05-31-overfit-lint-design.md
examples/: clean_momentum.py  overfit_example.py
overfitlint/: __init__.py  __main__.py  cli.py  config.py
overfitlint/core/: __init__.py  context.py  finding.py  registry.py  report.py  rule.py  runner.py
overfitlint/rules/: __init__.py  _util.py  excessive_params.py  gate_stacking.py  hardcoded_anchors.py  hardcoded_tickers.py  magic_thresholds.py  param_encoded_name.py  rank_position_pick.py
tests/: test_cli.py  test_examples.py  test_excessive_params.py  test_framework.py  test_gate_stacking.py  test_hardcoded_anchors.py  test_hardcoded_tickers.py  test_magic_thresholds.py  test_param_encoded_name.py  test_rank_position_pick.py
